<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogFieldEditorBooleanGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingEnd="24dp"
    android:paddingBottom="20dp">

    <RadioButton
        android:id="@+id/dialogFieldEditorBooleanEmpty"
        style="@style/TextAppearance.PatriGO.Body.Md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/asset_boolean_empty_option"
        android:textColor="@color/ink" />

    <RadioButton
        android:id="@+id/dialogFieldEditorBooleanYes"
        style="@style/TextAppearance.PatriGO.Body.Md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/asset_boolean_yes_option"
        android:textColor="@color/ink" />

    <RadioButton
        android:id="@+id/dialogFieldEditorBooleanNo"
        style="@style/TextAppearance.PatriGO.Body.Md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/asset_boolean_no_option"
        android:textColor="@color/ink" />

</RadioGroup>
